rework resolution to operate on names to be more explicit about when the suppliers are invoked